Moved the computational biology packages to the new JEAN library